[tool.poetry]
name = "finegrained"
version = "0.1.1"
description = "Quickly prepare data, train new models and export to production from a command line"
authors = ["Rustem Galiullin <rustemgal@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
finegrained = "finegrained.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
fiftyone = "^0.21.6"
fire = "^0.5.0"
numpy = "^1.22.4"
pyyaml = "^6.0"
pillow = "^9.4.0"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^3.7.8"
black = "^22.6"
isort = "^5.9.3"
pre-commit = "^3.0.2"

[tool.poetry.group.image.dependencies]
lightning-flash = {extras = ["image"], version = "^0.8.1.post0"}

[tool.poetry.group.text.dependencies]
transformers = "^4.27.1"

[tool.poetry.group.onnx.dependencies]
onnx = "^1.14.0"
onnxruntime = "^1.15.1"

[tool.poetry.group.log.dependencies]
mlflow = "^2.2.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-jupyter = "^0.24.0"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
